<resources>
    <string name="app_name">TicTacToe</string>
    <string name="header_Text_Game_Of_Tic_Tac_Toe">Game \nOf \nTicTacToe</string>
    <string name="choose_game_header">Choose game</string>
    <string name="highscore_header">Highscore</string>
    <string name="celiuc_sign">ºC</string>
    <string name="newgame">New game</string>
    <string name="player">Highscore</string>
    <string name="playervscomputer">Singelplayer</string>
    <string name="playervsplayer">Multiplayer</string>
    <string name="a_lannister_always_pays_his_debt">“ A Lannister \nalways \npays his debt ”</string>
    <string name="when_you_play_the_game">“ When you play the Game of TicTacToe, you win or you die “</string>
    <string name="wars_teach_people">“ Wars teach people to obey the sword, not the Gods “</string>
    <string name="start_game">Start Game</string>
    <string name="enter_playernameOne">Playername</string>
    <string name="enter_first_player_name">Player one</string>
    <string name="enter_second_player_name">Player two</string>
    <string name="player_name">Player</string>
    <string name="win">Win</string>
    <string name="draw">Draw</string>
    <string name="loss">Loss</string>
    <string name="reset_highscore">Reset highscore</string>
    <string name="vs">VS</string>
    <string name="time_played">Time play</string>
    <string name="end_game">EXIT GAME</string>
    <string name="exit_game">EXIT GAME ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="only_letters_and_numbers">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="restart_match">Restart match</string>
    <string name="change_modus">Change gamemodus</string>
    <string name="its_draw">Its draw!</string>
    <string name="who_starting_first">Who starts ?</string>
    <string name="user_exists">Use this playername ?</string>
    <string name="both_exists">Both exists !</string>
    <string name="max_letters_hint">Max 6 letters</string>
</resources>
