<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chooseFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context="no.woact.ahmmud16.Fragments.ChooseGameModusFragment">

    <TextView
        android:id="@+id/chooseGameHeaderTextView"
        android:layout_width="310dp"
        android:layout_height="149dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/gameofthrones"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/choose_game_header"
        android:textAlignment="center"
        android:textColor="@color/mainColor"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseGameHeaderTextView">

        <Button
            android:id="@+id/singelPlayerBtn"
            android:layout_width="285dp"
            android:layout_height="70dp"
            android:fontFamily="@font/gameofthrones"
            android:text="@string/playervscomputer"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/multiPlayerBtn"
            android:layout_width="285dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gameofthrones"
            android:text="@string/playervsplayer"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/quotesTextView"
        android:layout_width="322dp"
        android:layout_height="194dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/gameofthrones"
        android:minLines="3"
        android:text="@string/a_lannister_always_pays_his_debt"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
